[GStreamer] playbin uri getter is invalid https://bugs.webkit.org/show_bug.cgi?id=113884

Reviewed by Martin Robinson.

Source/WebCore:

When loading a new media location use the url stored as a member
variable instead of the one stored as a playbin property. The uri
property semantic changed in playbin since 0.10.36+. One should
now use current-uri but to avoid ifdefs depending on GStreamer
version we simply use the url already known as member variable.

Test: http/tests/media/video-redirect.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:

LayoutTests:

New test for Quicktime reference movie redirect
support.

* http/tests/media/resources/redirect-to-counting-captioned.mov: Added.
* http/tests/media/video-redirect-expected.txt: Added.
* http/tests/media/video-redirect.html: Added.

Canonical link: https://commits.webkit.org/132700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148079 268f45cc-cd09-0410-ab3c-d52691b4dbfc